example/include_directory/demo_001/log.txt
main.c:3:10: fatal error: common.h: No such file or directory
 #include "common.h"
          ^~~~~~~~~~
compilation terminated.

